Search bar added, search functionality implemented

--- a/smilecook/smilecook.csproj
+++ b/smilecook/smilecook.csproj
@@ -12,7 +12,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 
 		<!-- Display name -->
-		<ApplicationTitle>smilecook</ApplicationTitle>
+		<ApplicationTitle>Smilecook</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.smilecook</ApplicationId>
