Add button added to ingredients on the recipe details page

--- a/smilecook/smilecook.csproj
+++ b/smilecook/smilecook.csproj
@@ -50,6 +50,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\add.svg" />
 	  <None Remove="Resources\Images\clock.png" />
 	  <None Remove="Resources\Images\cutlery.svg" />
 	  <None Remove="Resources\Images\cutlery_yellow.png" />
@@ -60,6 +61,7 @@
 	  <None Remove="Resources\Images\logo.svg" />
 	  <None Remove="Resources\Images\open_in_new_1.png" />
 	  <None Remove="Resources\Images\open_in_new_img.png" />
+	  <None Remove="Resources\Images\plus.svg" />
 	  <None Remove="Resources\Images\weight.png" />
 	  <None Remove="Resources\Images\world.png" />
 	</ItemGroup>
