--- a/smilecook/smilecook.csproj
+++ b/smilecook/smilecook.csproj
@@ -57,11 +57,13 @@
 	  <None Remove="Resources\Images\energy.png" />
 	  <None Remove="Resources\Images\filter.png" />
 	  <None Remove="Resources\Images\filter.svg" />
+	  <None Remove="Resources\Images\list.svg" />
 	  <None Remove="Resources\Images\logo.png" />
 	  <None Remove="Resources\Images\logo.svg" />
 	  <None Remove="Resources\Images\open_in_new_1.png" />
 	  <None Remove="Resources\Images\open_in_new_img.png" />
 	  <None Remove="Resources\Images\plus.svg" />
+	  <None Remove="Resources\Images\search.svg" />
 	  <None Remove="Resources\Images\weight.png" />
 	  <None Remove="Resources\Images\world.png" />
 	</ItemGroup>
@@ -77,6 +79,9 @@
 
 	<ItemGroup>
 	  <MauiXaml Update="Views\RecipeDetailPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\ShoppingListPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
