Refreshing shopping list on appearing

--- a/smilecook/smilecook.csproj
+++ b/smilecook/smilecook.csproj
@@ -54,6 +54,7 @@
 	  <None Remove="Resources\Images\clock.png" />
 	  <None Remove="Resources\Images\cutlery.svg" />
 	  <None Remove="Resources\Images\cutlery_yellow.png" />
+	  <None Remove="Resources\Images\delete.svg" />
 	  <None Remove="Resources\Images\energy.png" />
 	  <None Remove="Resources\Images\filter.png" />
 	  <None Remove="Resources\Images\filter.svg" />
