--- a/smilecook/smilecook.csproj
+++ b/smilecook/smilecook.csproj
@@ -65,6 +65,7 @@
 	  <None Remove="Resources\Images\open_in_new_img.png" />
 	  <None Remove="Resources\Images\plus.svg" />
 	  <None Remove="Resources\Images\search.svg" />
+	  <None Remove="Resources\Images\star.svg" />
 	  <None Remove="Resources\Images\weight.png" />
 	  <None Remove="Resources\Images\world.png" />
 	</ItemGroup>
@@ -79,6 +80,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Views\FavouritesPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\RecipeDetailPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
