--- a/smilecook/smilecook.csproj
+++ b/smilecook/smilecook.csproj
@@ -63,6 +63,7 @@
 	  <None Remove="Resources\Images\logo.svg" />
 	  <None Remove="Resources\Images\open_in_new_1.png" />
 	  <None Remove="Resources\Images\open_in_new_img.png" />
+	  <None Remove="Resources\Images\placeholder.png" />
 	  <None Remove="Resources\Images\plus.svg" />
 	  <None Remove="Resources\Images\search.svg" />
 	  <None Remove="Resources\Images\star.svg" />
