Displaying My Recipes

--- a/smilecook/smilecook.csproj
+++ b/smilecook/smilecook.csproj
@@ -65,6 +65,7 @@
 	  <None Remove="Resources\Images\open_in_new_img.png" />
 	  <None Remove="Resources\Images\placeholder.png" />
 	  <None Remove="Resources\Images\plus.svg" />
+	  <None Remove="Resources\Images\restaurant.svg" />
 	  <None Remove="Resources\Images\search.svg" />
 	  <None Remove="Resources\Images\star.svg" />
 	  <None Remove="Resources\Images\star_filled_white.svg" />
@@ -87,6 +88,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\FavouritesPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\MyRecipesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\RecipeDetailPage.xaml">
